multi role_privilrge lines bug fixing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,4 +27,4 @@ spring.batch.initialize-schema=always
 SecretToken=23f04903-e45d-46a7-8bc2-1e442131567
 
 
-
+spring.jpa.properties.hibernate.hbm2ddl.import_files_sql_extractor=org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
